<resources>
    <string name="app_name">FBF!</string>
    <string name="gameTitle1">Float</string>
    <string name="gameTitle2">Bubble</string>
    <string name="gameTitle3">Float!</string>
    <string name="start">Start</string>
    <string name="settings">Settings</string>
    <string name="mute">Mute</string>
    <string name="music">Music</string>
    <string name="soundFX">Sound FX</string>
    <string name="scoreText">Score: </string>
    <string name="playAgain">Play Again</string>
    <string name="quit">Quit</string>
    <string name="title_activity_pause_menu">PauseMenu</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="resume">Resume</string>
    <string name="pause">||</string>
    <string name="paused">Paused</string>
    <string name="mainMenu">Main Menu</string>
    <string name="rank">Rank</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="backArrow"><![CDATA[<]]></string>
    <string name="rank1">1</string>
    <string name="rank2">2</string>
    <string name="rank3">3</string>
    <string name="rank4">4</string>
    <string name="rank5">5</string>
    <string name="emptyScore">-----</string>
    <string name="emptyName">---</string>
    <string name="cleardb">Clear Leaderboards</string>
    <string name="tutorial">Enable Tutorial</string>
    <string name="difficulty">Difficulty</string>
</resources>
